# gitlab-cq

./: .gitignore  Pipfile  README.md  pyproject.toml
gitlab_cq/: __init__.py  __main__.py  gcc.py  mypy.py  pyright.py  ruff.py
test/: ruff.toml  test_gcc.py  test_mypy.py  test_pyright.py  test_ruff.py
